fix: include scratched crews in start order by number location

--- a/frontend/src/components/pages/CrewStartByNumberLocation/crewStartByNumberLocation.scss
+++ b/frontend/src/components/pages/CrewStartByNumberLocation/crewStartByNumberLocation.scss
@@ -16,6 +16,10 @@
   &__table {
     width: 100%;
     @include table;
+
+    .scratched {
+      text-decoration: line-through;
+    }
   }
 
   &__title {
