--- a/frontend/src/components/pages/CrewManagementDashboard/crewManagementDashboard.scss
+++ b/frontend/src/components/pages/CrewManagementDashboard/crewManagementDashboard.scss
@@ -1,9 +1,7 @@
-@import '../../../style.scss';
-@import '../../../lib.scss';
-
+@import "../../../style.scss";
+@import "../../../lib.scss";
 
 .crew-manager {
-
   &__section {
     @include section;
   }
@@ -29,9 +27,9 @@
     button {
       color: $bblBlue;
       padding: 0.3rem;
+      height: 100%;
       @include body-small;
     }
-
 
     &:hover {
       background-color: $phLogoBlue;
@@ -40,11 +38,10 @@
       }
     }
 
-
     &--active {
       background-color: $phLogoBlue;
       button {
-        color: $bblBlue; 
+        color: $bblBlue;
       }
     }
   }
@@ -54,7 +51,7 @@
     grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
     gap: 1.5rem;
     margin: 1.5rem 0;
-    
+
     @media (max-width: 768px) {
       grid-template-columns: 1fr;
       gap: 1rem;
