--- a/frontend/src/components/pages/CrewDrawReports/crewDrawReports.scss
+++ b/frontend/src/components/pages/CrewDrawReports/crewDrawReports.scss
@@ -44,6 +44,13 @@
     margin-left: 0;
 
     @include table;
+
+    &--marshall-finish {
+      td,
+      th {
+        font-size: 16px;
+      }
+    }
   }
 
   &__tabs {
